# gptk

./: DevelopmentFolderStructure.md  DevelopmentMain.md  InstallationLinux.md  Makefile  ProjectHome.md  bootstrap
examples/: Makefile  Makefile.am  Rosenbrock.cpp  RosenbrockND.cpp  RosenbrockND.h  SpatialExample.cpp  demGP2.cpp  demOpt1.cpp  demOpt2.cpp  demSSGP.cpp  demSSGP1.cpp  demSSGP2.cpp  demSSGPAlgo.cpp  demo_active_set.h  demo_large_dataset.cpp  demo_large_dataset.h  demo_sine.cpp  gp2d_tst.csv  helicopter.csv  noisysine.csv  noisysinePred.csv  output.m
examples/CAGEO/demo_active_set/: main.h
examples/CAGEO/demo_complex_observation_noise/: Makefile  main.cpp
examples/CAGEO/demo_large_dataset/: Makefile  cross_validation.m  plot_example.m
examples/CAGEO/demo_obs_projection/: Makefile  plot_demo_proj.m
gptk/: Makefile.common
libgptk/: Makefile.Rpackage  RInterface.cpp  astonGeostats.cpp  debug.h  gptk.doxyfile  libgptk.so.0.0.1
src/: Makefile.am
src/covariance_functions/: ConstantCF.cpp  CovarianceFunction.cpp  CovarianceFunction.h  ExponentialCF.h  Matern3CF.cpp  NeuralNetCF.h  StationaryCF.cpp  StationaryCF.h  SumCF.cpp  SumCF.h
src/gaussian_processes/: GaussianProcess.cpp  PSGP.cpp
src/likelihood_models/: GaussianSampLikelihood.cpp  GaussianSampLikelihood.h
src/plotting/: GraphPlotter.cpp
tests/: Test.cpp  Test.h  TestGP.cpp  TestGP.h  TestGradientCovFunc.cpp  TestITPPext.cpp  TestITPPext.h  TestOptimisationSCG.h  tests.cpp
trunk/: Makefile.am  configure.ac  gptk.Doxyfile
wiki/: DevelopmentFolderStructure.wiki  DevelopmentMain.wiki  (+1 more)
(+262 files in other folders)
