bin_PROGRAMS = demo_active_set demo_heterogeneous_noise

demo_active_set_SOURCES  = demo_active_set.cpp 
demo_active_set_LDADD    = $(top_builddir)/src/libgptk.la
demo_active_set_CPPFLAGS = -I$(top_srcdir)/src

demo_heterogeneous_noise_SOURCES = demo_heterogeneous_noise.cpp
demo_heterogeneous_noise_LDADD    = $(top_builddir)/src/libgptk.la
demo_heterogeneous_noise_CPPFLAGS = -I$(top_srcdir)/src